Cambio de diseño de seccion Testimonios y Proyectos

--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -12,7 +12,7 @@ import { Image } from "astro:assets";
 
 ---
 
-<section class="w-full section-with-glow pt-24 md:pt-[12vw] lg:pt-16 z-20 relative border-b-[1px] border-bgDark3 section-shadow">
+<section class="w-full section-with-glow pt-24 md:pt-[12vw] lg:pt-16 z-20 relative">
   <div class="w-screen flex justify-center relative">
     <div
       class="w-11/12 sm:w-4/5 lg:w-[90%] xl:w-[80%] 2xl:w-[1200px] mx-auto grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 z-10 rounded-xl mt-[-50px] lg:mt-[-150px] xl:mt-[-250px]"
