--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -4,42 +4,42 @@ import Tacu from "../assets/logos/tacu.png";
 import Domum from "../assets/logos/domum.svg";
 import Titanes from "../assets/logos/clubDeTitanes.png";
 import Daes from "../assets/logos/daes.png";
-import Gobierno from "../assets/logos/gobiernoSJ.svg";
+import Gobierno from "../assets/logos/gobiernoSJ.png";
 import DonTomas from "../assets/logos/dontomas.png";
 ---
 
-<section class="py-12 sm:py-24 bg-bgDark1 w-full lg:mt-16 mb-8 lg:mb-16">
+<section class="bg-gradient-to-b from-bgDark2 to-bgDark1 w-full py-32 z-50 relative">
     <div class="container px-4 mx-auto 2xl:w-[1200px] xl:w-[1100px] lg:w-[1000px] md:w-4/5">
       <div class="flex lg:flex-row flex-col items-center -mx-4 justify-center lg:text-left text-center">
         <div class="w-full lg:w-1/2 px-4 mb-12 lg:mb-0">
           <div class="flex flex-col">
             <h2 class="mb-2 text-4xl sm:text-5xl 2xl:text-6xl font-bold tracking-normal text-primaryText">
-              Nuestros clientes
+              Confían en
             </h2>
             <h2 class="text-4xl sm:text-5xl 2xl:text-6xl font-bold tracking-normal text-secondaryColor">
-              Que nos respaldan
+              Nuestro trabajo
             </h2>
           </div>
         </div>
         <div class="w-2/3 sm:w-[620px] lg:w-1/2 mx-auto lg:mx-0 lg:pl-10">
-          <div class="flex flex-wrap -m-4">
-            <div class="w-1/2 sm:w-1/3 py-6 flex justify-center">
-              <Image src={Domum} alt="Domum" />
+          <div class="grid grid-cols-2 sm:grid-cols-3 gap-10 opacity-80">
+            <div class="flex justify-start items-start">
+              <Image src={Domum} alt="Domum" class="h-14 w-full object-scale-down"/>
             </div>
-            <div class="w-1/2 sm:w-1/3 py-6 flex justify-center">
-              <Image src={Tacu} alt="Tacu" class="h-14" />
+            <div class="flex justify-start items-start">
+              <Image src={Tacu} alt="Tacu" class="h-14 w-full object-scale-down p-2"/>
             </div>
-            <div class="w-1/2 sm:w-1/3 py-6 flex justify-center">
-              <Image src={Titanes} alt="Titanes" />
+            <div class="flex justify-start items-start">
+              <Image src={Titanes} alt="Titanes" class="h-14 w-full object-scale-down p-2"/>
             </div>
-            <div class="w-1/2 sm:w-1/3 py-6 flex justify-center">
-              <Image src={Daes} alt="Daes" class="h-12" />
+            <div class="flex justify-start items-start">
+              <Image src={Daes} alt="Daes" class="h-14 w-full object-scale-down p-2"/>
             </div>
-            <div class="w-1/2 sm:w-1/3 py-6 flex justify-center">
-              <Image src={Gobierno} class="h-12" alt="Gobierno" />
+            <div class="flex justify-start items-start">
+              <Image src={Gobierno} alt="Gobierno" class="h-14 w-full object-scale-down p-2"/>
             </div>
-            <div class="w-1/2 sm:w-1/3 py-6 flex justify-center">
-              <Image src={DonTomas} alt="Don Tomas" class="h-12 w-40"  />
+            <div class="flex justify-start items-start">
+              <Image src={DonTomas} alt="Don Tomas" class="h-14 w-full object-scale-down p-2"/>
             </div>
           </div>
         </div>
