Cambio de diseño seccion blog

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -7,32 +7,33 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
 ---
 
 <section
-  class="w-full flex justify-center pt-16 mb-16 lg:mb-32 bg-bgDark2 relative"
+  class="w-full flex justify-center py-16 bg-bgDark1/60 relative section-with-glow"
   id="blog"
 >
   <div class="container">
     <div class="justify-center flex flex-col lg:text-left mb-16 mx-auto">
-      <span class="text-lg text-secondaryText text-center">Nuestro Blog</span>
       <h2
         class="mt-4 mb-4 text-3xl md:text-4xl lg:text-5xl font-bold text-primaryText text-center"
       >
-        Últimos Posteos
+        Nuestro 
+        <span class="text-secondaryColor">
+          Blog
+        </span>
       </h2>
-      <p class="text-secondaryText max-w-lg mx-auto text-center">
+      <p class="text-center text-xs text-white tracking-wider font-bold uppercase">
         Mantente actualizado con los últimos posteos de nuestro blog
       </p>
     </div>
 
     <!-- Responsive grid layout for blog posts -->
     <div
-      class={`grid gap-8 ${posts.length === 1 ? "grid-cols-1 place-items-center" : "sm:grid-cols-2 lg:grid-cols-3"} mx-auto`}
+      class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 w-full lg:w-[1150px] mx-auto"
     >
       {
         visiblePosts.map((post, index) => (
           <a
             href={`/posts/${post.id}`}
-            key={`${post.title}-${index}`}
-            class="bg-bgDark3 rounded-3xl overflow-hidden hover:bg-bgDark3Hover transition cursor-pointer shadow-lg text-white w-full max-w-md"
+            class="bg-[rgba(48,49,54,0.7)] rounded-3xl flex flex-col border-[1px] border-[rgba(255,255,255,0.2)] h-[470px] overflow-hidden text-white hover:bg-[rgba(48,49,54,0.9)] transition duration-100"
           >
             <img
               src={post.image}
@@ -44,7 +45,7 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
                 {post.title}
               </h3>
               <p
-                class="text-secondaryText leading-relaxed"
+                class="text-red-500"
                 set:html={post.subtitle}
               />
             </div>
@@ -68,3 +69,12 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
     }
   </div>
 </section>
+
+<style>
+  .section-with-glow {
+  background: 
+    radial-gradient(600px circle at 0% 50%, rgba(156,158,239, 0.25), transparent 80%),
+    radial-gradient(500px circle at 85% 50%, rgba(221, 255, 83, 0.2), transparent 90%),
+    #121312;
+  }
+</style>
