--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,8 @@ const { title } = Astro.props;
     <link rel="icon" href="/favicontech.png" />
     <meta name="generator" content={Astro.generator} />
     <meta
-      name="Technodevs"
-      content="Creamos sitios web modernos, rápidos y seguros. Diseñados a medida para potenciar tu negocio y ofrecer la mejor experiencia a tus usuarios."
+      name="description"
+      content="En Technodevs ofrecemos desarrollo y diseño web, aplicaciones a medida y estrategias digitales. Innovamos para potenciar negocios y destacar tu marca online. Argentina."
     />
     <title>{title}</title>
     <link
