--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/Theme.css'
 import '../styles/Diagonals.css'
 ---
 
-<Layout title="Technodevs">
+<Layout title="Desarrollo y Diseño Web Profesional, Aplicaciones y Estrategias Digitales Argentina">
   <Splash />
   <Features1 />
   <FeaturesDiagonal client:load/>
