--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -10,11 +10,11 @@ import plans from "../data/plan.json";
     <div class="container mx-auto px-4">
       <!-- Título y Selector -->
       <div class="max-w-2xl mx-auto text-center mb-16">
-        <span class="text-center text-xs text-white tracking-wider font-bold uppercase">Encontrá el plan que se adapte a vos</span>
+        <span class="text-center text-xs text-white tracking-wider font-bold uppercase">Elige el Plan Ideal para Tu Negocio</span>
         <h2
           class="mt-6 mb-6 text-4xl lg:text-5xl font-bold font-heading text-primaryText"
         >
-          Mira nuestros planes
+          Nuestros planes
         </h2>
         <div class="toggle-wrapper flex justify-center items-center space-x-4 mt-12">
           <button class="toggle-button active" id="webToggle" data-type="web"
@@ -34,28 +34,29 @@ import plans from "../data/plan.json";
         {
           plans.map((plan) => (
             <div
-              class="plan-card w-[350px] sm:w-[380px] lg:w-1/3 px-4 mb-8 lg:mb-0"
+              class="plan-card w-[350px] sm:w-[380px] lg:w-1/3 px-3 mb-8 lg:mb-0"
               data-type={plan.type}
               data-plan={plan.plan}
-            >
-              <div class="p-8 bg-[rgba(48,49,54,0.7)] rounded-3xl border-[1px] border-[rgba(255,255,255,0.2)] h-[470px]">
+              >
+              <div class="py-8 px-5 bg-[rgba(48,49,54,0.7)] flex flex-col justify-start rounded-3xl border-[1px] border-[rgba(255,255,255,0.2)] h-[500px]">
                 <h3 class="text-xl font-bold font-heading text-primaryText text-left">
                   {plan.title}
                 </h3>
                 <div class="flex justify-start flex-col">
                   <p class="text-gray-300 text-left mt-4">{plan.description}</p>
-                  <div class="text-4xl sm:text-5xl font-bold text-primaryText text-left mt-1 mb-10">
+                  <div class="text-4xl sm:text-4xl font-bold text-primaryText text-left mt-1 mb-10">
                     {plan.price}
                   </div>
                 </div>
                 <ul class="mb-2 text-primaryText">
                   {plan.features.map((feature, index) => (
-                    <li class="mb-4 flex">
+                    <li class="mb-3 flex">
                       <CheckArrowIcon />
                       <span>{feature}</span>
                     </li>
                   ))}
                 </ul>
+                <span class="text-sm mt-auto text-gray-300 text-center w-full self-end place-self-end px-7">{plan.badge}</span>
               </div>
             </div>
           ))
