--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -8,7 +8,9 @@ import feature3 from "../assets/images/pc-ia.webp";
 import feature4 from "../assets/images/code.webp";
 import feature5 from "../assets/images/centerpadel.png";
 import { Image } from "astro:assets";
-
+import NetIcon from "./Icons/NetIcon.astro";
+import ScreenIcon from "./Icons/ScreenIcon.astro";
+import ImageIcon from "./Icons/ImageIcon.astro";
 
 ---
 
@@ -21,8 +23,8 @@ import { Image } from "astro:assets";
       <div
         class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-3xl backdrop-blur-lg duration-300 ease-in-out h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[rgba(200,200,200,0.2)] main-border-gray-darker mb-4 relative cursor-pointer transition opacity-0 transform translate-y-10"
       >
-        <TfiWorld className="text-6xl text-primaryText" />
-        <h4 class="text-[#ddff53] text-2xl font-semibold text-center custom-shadow">
+        <NetIcon />
+        <h4 class="gradient-text text-2xl font-semibold text-center custom-shadow">
           Desarrollo web
         </h4>
         <p class="text-primaryText text-center text-base">
@@ -32,8 +34,8 @@ import { Image } from "astro:assets";
       <div
         class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-3xl mt-12 backdrop-blur-lg duration-300 ease-in-out h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[rgba(200,200,200,0.2)] main-border-gray-darker mb-4 relative cursor-pointer transition opacity-0 transform translate-y-10"
       >
-        <CiMonitor className="text-6xl text-primaryText" />
-        <h4 class="text-[#ddff53] text-2xl font-semibold text-center custom-shadow">
+        <ScreenIcon />
+        <h4 class="gradient-text text-2xl font-semibold text-center custom-shadow">
           Aplicaciones a Medida
         </h4>
         <p class="text-primaryText text-center text-base">
@@ -43,8 +45,8 @@ import { Image } from "astro:assets";
       <div
         class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-3xl backdrop-blur-lg duration-300 ease-in-out h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[rgba(200,200,200,0.2)] main-border-gray-darker mb-4 relative cursor-pointer transition opacity-0 transform translate-y-10"
       >
-        <IoMdPhotos className="text-6xl text-primaryText" />
-        <h4 class="text-[#ddff53] text-2xl font-semibold text-center custom-shadow">
+        <ImageIcon />
+        <h4 class="gradient-text text-2xl font-semibold text-center custom-shadow">
           Gestión de Redes Sociales
         </h4>
         <p class="text-primaryText text-center text-base">
@@ -155,9 +157,6 @@ import { Image } from "astro:assets";
     transform: translateY(50px);
   }
 
-  .custom-shadow {
-        filter: drop-shadow(0 0 3mm rgb(221,255,83, 0.5));
-    }
 
     .section-with-glow {
   background: 
@@ -174,5 +173,6 @@ import { Image } from "astro:assets";
 -moz-box-shadow: 0px 24px 22px -30px rgba(255,255,255,1);
 box-shadow: 0px 24px 22px -30px rgba(255,255,255,.2)
 }
+
 
 </style>
