--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -75,7 +75,7 @@ import plans from "../data/plan.json";
       <!-- Botón CTA ilustrativo -->
       <div class="text-center mt-10">
         <div
-          class="inline-block px-6 py-3 bg-primary-700 text-white text-lg font-bold rounded-md cursor-default"
+          class="inline-block px-6 mt-9 text-white text-3xl font-bold rounded-md cursor-default"
         >
           Elige tu plan y contáctanos ahora
         </div>
