--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -1,30 +1,30 @@
 ---
 import { Image } from "astro:assets";
-import testimonial1 from "../assets/images/testimonial1.png";
-import testimonial2 from "../assets/images/testimonial2.png";
-import testimonial3 from "../assets/images/testimonial3.png";
+import VillaDonTomas from "../assets/images/VillaDonTomas.webp";
+import TomasCasiva from "../assets/images/tomasCasiva.png";
+import Domum from "../assets/images/domum.png";
 import triangle from "./triangle.svg";
 const testimonialsData = [
   {
-    customerName: "John Watkins",
-    customerTitle: "Founder of Dashflow",
+    customerName: "Daniela",
+    customerTitle: "Villa Don Tomás",
     content:
-      "The powerful analytic tools have helped us streamline our processes and make data-driven decisions that positively impact our efficiency. technodevs has been a game-changer for our business. The platform is easy to use, and the insights we've gained have driven significant improvements.",
-    image: testimonial1,
+      "El equipo de Technodevs transformó mi sitio web en algo moderno y funcional. Ahora refleja perfectamente mi marca, y mis clientes lo aman. ¡Fue una experiencia increíble trabajar con ellos!",
+    image: VillaDonTomas,
   },
   {
-    customerName: "John Watkins",
-    customerTitle: "Founder of Dashflow",
+    customerName: "Marcelo Casiva",
+    customerTitle: "Web Escritor",
     content:
-      "The powerful analytic tools have helped us streamline our processes and make data-driven decisions that positively impact our efficiency. technodevs has been a game-changer for our business. The platform is easy to use, and the insights we've gained have driven significant improvements.",
-    image: testimonial2,
+      "Desde el primer contacto, el equipo de Technodevs entendió lo que quería. Diseñaron mi sitio desde cero, y ahora puedo compartir mis relatos de forma profesional y sencilla. ¡Estoy encantado con el resultado!",
+    image: TomasCasiva,
   },
   {
-    customerName: "John Watkins",
-    customerTitle: "Founder of Dashflow",
+    customerName: "Franco",
+    customerTitle: "Domum",
     content:
-      "The powerful analytic tools have helped us streamline our processes and make data-driven decisions that positively impact our efficiency. technodevs has been a game-changer for our business. The platform is easy to use, and the insights we've gained have driven significant improvements.",
-    image: testimonial3,
+      "El equipo de Technodevs no solo rediseñó nuestra web, sino que también tomó el control de nuestras redes sociales con gran profesionalismo. La imagen renovada y los resultados en interacción fueron inmediatos. ¡Son geniales!",
+    image: Domum,
   },
 ];
 ---
