Finalizo web base

--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -72,7 +72,7 @@ import ImageIcon from "./Icons/ImageIcon.astro";
         <p class="mb-10 text-secondaryText leading-loose">
           En este nuevo escenario, surge Technodevs, estamos aquí para ayudarte a explorar las infinitas oportunidades del universo digital, construir una identidad visual poderosa y destacar entre las demás empresas. Somos únicos y nuestra forma de trabajar también lo es. No solo seguimos tendencias, las creamos, siempre enfocados en generar un impacto significativo.
         </p>
-        <a href="#FAQ" class="w-[210px] h-12 contained-button bg-secondary-950 mr-10">
+        <a href="https://wa.me/+5492646270803" target="_blank" class="w-[210px] h-12 contained-button bg-secondary-950 mr-10">
           Contáctanos
         </a>
       </div>
