--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -8,90 +8,111 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
 <section class="relative h-full py-10">
-    <Starfield/>
-    <div class="relative grid h-full place-items-center sm:grid-cols-2">
-        <h2
-            class="flex flex-col items-center gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end custom-shadow"
+  <Starfield />
+  <div class="relative grid h-full place-items-center sm:grid-cols-2">
+    <div
+      class="flex flex-col items-start max-w-[40rem] gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end custom-shadow"
+    >
+      <div
+        class="gradient-text text-start font-extrabold w-full tracking-tighter text-6xl md:text-8xl"
+      >
+        <span>
+          Web Design &
+          <br /> Social Media
+        </span>
+      </div>
+      <span class="text-start text-lg gradient-text">
+        Creamos experiencias digitales únicas con desarrollo web, aplicaciones a
+        medida y diseño de alto impacto.
+      </span>
+      <a href="https://wa.me/+5492646270803" target="_blank"
+        class="relative w-[200px] h-[50px] rounded-full p-[2px] bg-gradient-to-r from-primaryColor to-secondary-200 bg-[length:200%_200%] bg-[0%_0%] hover:bg-[100%_0%] transition-all duration-200 ease-out"
+      >
+        <span
+          class="flex items-center justify-center w-full h-full bg-[#03041f] text-white rounded-full"
         >
-            <div
-                class="gradient-text text-center font-extrabold tracking-tighter text-6xl md:text-8xl"
-            >
-                Web Design &
-                <br /> Social Media
-            </div>
-        </h2>
-        <div
-            id="astronaut"
-            class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
-        >
-            <Image
-                class="h-full w-full object-cover"
-                src={astronautImage}
-                widths={widths}
-                sizes={sizes}
-                loading="eager"
-                alt="A floating astronaut in a space suit"
-            />
-        </div>
+          Contáctanos
+        </span>
+      </a>
     </div>
-    <div class="relative w-screen justify-center mb-[-42px] z-10">
-            <svg
-                data-name="Layer 1"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 1200 120"
-                preserveAspectRatio="none"
-                class="w-full custom-shadow"
-            >
-                <path
-                    d="M0,0 L600,100 L1200,0 L1200,120 L0,120 Z"
-                    class="bg-blackPrimary fill-blackPrimary"
-                    filter="url(#dropShadowExternal)"
-                ></path>
-            </svg>
+    <div
+      id="astronaut"
+      class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
+    >
+      <Image
+        class="h-full w-full object-cover"
+        src={astronautImage}
+        widths={widths}
+        sizes={sizes}
+        loading="eager"
+        alt="A floating astronaut in a space suit"
+      />
     </div>
-    
-    
+  </div>
+  <div class="relative w-screen justify-center mb-[-42px] z-10">
+    <svg
+      data-name="Layer 1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1200 120"
+      preserveAspectRatio="none"
+      class="w-full custom-shadow"
+    >
+      <path
+        d="M0,0 L600,100 L1200,0 L1200,120 L0,120 Z"
+        class="bg-blackPrimary fill-blackPrimary"
+        filter="url(#dropShadowExternal)"></path>
+    </svg>
+  </div>
 </section>
 
 <noscript>
-    <style>
-        #splash-bg-fallback {
-            display: block;
-        }
-
-    </style>
+  <style>
+    #splash-bg-fallback {
+      display: block;
+    }
+  </style>
 </noscript>
 
 <style>
-    
-    .custom-shadow {
-        filter: drop-shadow(0 0 20mm rgb(200, 200, 200, 0.4));
-    }
-    @keyframes float {
-        0% {
-            transform: translate3d(0, 0, 0);
-        }
-
-        100% {
-            transform: translate3d(0, 30px, 0);
-        }
+  .custom-shadow {
+    filter: drop-shadow(0 0 20mm rgb(200, 200, 200, 0.4));
+  }
+  @keyframes float {
+    0% {
+      transform: translate3d(0, 0, 0);
     }
 
+    100% {
+      transform: translate3d(0, 30px, 0);
+    }
+  }
+
+  #astronaut {
+    animation: float linear 8.5s infinite alternate;
+  }
+
+  @media (prefers-reduced-motion: reduce) {
     #astronaut {
-        animation: float linear 8.5s infinite alternate;
+      @apply animate-none;
     }
 
-    @media (prefers-reduced-motion: reduce) {
-        #astronaut {
-            @apply animate-none;
-        }
-
-        :global(#starfield) {
-            @apply hidden;
-        }
-
-        #splash-bg-fallback {
-            @apply block;
-        }
+    :global(#starfield) {
+      @apply hidden;
     }
+
+    #splash-bg-fallback {
+      @apply block;
+    }
+  }
+
+  .linear-gradient {
+    border-image: linear-gradient(45deg, #818cf8, #c7d2fe, #bcee22 140%) 1;
+  }
+  .box {
+    width: 200px;
+    height: 50px;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 100%;
+  }
 </style>
