--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,10 +27,15 @@ const footerData = [
     ],
   },
 ];
+
+import Rocket from '../assets/images/rocket.png'
+import Logo from '../assets/images/LogoTechnodevs.png'
+import { Image } from 'astro:assets';
 ---
 
 <footer aria-label="Site footer">
-  <div class="pt-10 lg:pt-20 lg:pb-16 bg-bgDark1 radius-for-skewed">
+  <div class="pt-10 lg:pt-20 lg:pb-16 bg-bgDark1 radius-for-skewed relative overflow-hidden">
+    <Image src={Rocket} alt="Domum" class="absolute left-[-80px] bottom-[-60px] w-[400px]"/>
     <div class="container mx-auto px-4 w-4/5 md:w-11/12 lg:w-10/12 xl:w-4/5 2xl:w-2/3">
       <div class="flex flex-wrap">
         <div class="w-full lg:w-1/3 mb-16 lg:mb-0">
@@ -38,11 +43,13 @@ const footerData = [
             <div class="text-white mr-2 text-6xl">
               <!-- <TailcastLogo /> -->
             </div>
-            <div class="text-white font-['Inter'] font-bold text-xl">Technodevs</div>
           </div>
-          <p class="mb-10 mt-4 sm:w-[22rem] lg:w-[20rem] xl:w-[24rem] text-gray-400 leading-loose text-center lg:text-left mx-auto lg:mx-0">
-            En Technodevs creamos soluciones innovadoras para potenciar tu negocio. Estamos aquí para ayudarte a crecer.
-          </p>
+          <div class="flex flex-col items-start justify-center">
+            <Image src={Logo} alt="Logo" class="w-24 object-scale-down mx-auto lg:mx-0"/>
+            <p class="mb-10 mt-4 sm:w-[22rem] lg:w-[20rem] xl:w-[24rem] text-gray-400 leading-loose text-center lg:text-left mx-auto lg:mx-0">
+              En Technodevs creamos soluciones innovadoras para potenciar tu negocio. Estamos aquí para ayudarte a crecer.
+            </p>
+          </div>
           <div class="w-36 mx-auto lg:mx-0 flex">
             <a
               class="w-10 h-10 mr-2 p-2 pt-[0.55rem] pl-[0.55rem] outlined-button flex justify-center items-center"
